:sparkles: Add: Read from DB for Doctor and Appointment

--- a/medicalAppointments/medicalAppointments/Views/Shared/_Layout.cshtml
+++ b/medicalAppointments/medicalAppointments/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Pacient Master", "Index", "Paciente")</li>
+                    <li>@Html.ActionLink("Doctor Master", "Index", "Doctores")</li>
+                    <li>@Html.ActionLink("Appointment Master", "Index", "Citas")</li>
                 </ul>
             </div>
         </div>
