--- a/medicalAppointments/medicalAppointments/Views/Doctores/Index.cshtml
+++ b/medicalAppointments/medicalAppointments/Views/Doctores/Index.cshtml
@@ -15,6 +15,24 @@
         </button>
     </div>
 }
+else if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        <strong>Success ! </strong> @TempData["SuccessMessage"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span>&times;</span>
+        </button>
+    </div>
+}
+else if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        <strong>Error ! </strong> @TempData["ErrorMessage"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span>&times;</span>
+        </button>
+    </div>
+}
 
 <p>
     @Html.ActionLink("Add New Doctor", "Create", null, new { @class = "btn btn-primary" })
